完成了搜索页面

--- a/public/front/css/commin.css
+++ b/public/front/css/commin.css
@@ -60,6 +60,7 @@ html,body{
   height: 100%;
   /* background-color: green; */
   position: relative;
+  background-color: #fff;
 }
 /* 底部区域 */
 .lt_footer{
