--- a/public/front/css/commin.css
+++ b/public/front/css/commin.css
@@ -91,3 +91,56 @@ html,body{
 .lt_footer li.now p{
   color: darkorange;
 }
+
+/* 搜索框 */
+.lt_search{
+  padding: 10px;
+  position: relative;
+}
+.lt_search input{
+  height: 34px;
+  border: 1px solid #007aff;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  padding-left: 10px;
+}
+.lt_search button{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border-radius: 0 3px 3px 0;
+}
+
+/* 商品区域 */
+.lt_product{
+  padding: 10px;
+}
+.lt_product a{
+  display: block;
+  float: left;
+  width: 48%;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  margin-bottom: 10px;
+  padding: 10px;
+  text-align: center;
+}
+.lt_product .proName{
+  height: 39px;
+}
+.lt_product a:nth-child(even){
+  margin-left: 4%;
+}
+.lt_product a .price{
+  color: red;
+}
+.lt_product a .old_price{
+  text-decoration: line-through;
+}
+img{
+  display: block;
+  width: 100%;
+  height: 100%;
+}
