--- a/public/admin/css/common.css
+++ b/public/admin/css/common.css
@@ -24,7 +24,7 @@ a:link, a:visited, a:hover, a:active{
   width: 180px;
   height: 100%;
   background: #222d32;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: 999;
@@ -93,16 +93,32 @@ a:link, a:visited, a:hover, a:active{
   height: 50px;
   background-color: #3c8dbc;
   line-height: 50px;
-  padding: 0 20px;
+  padding: 0 20px 0 200px;
   margin-bottom: 20px;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  transition: all 1s;
+}
+.lt_main .lt_topbar.now{
+  padding-left: 20px;
 }
 .lt_main .lt_topbar a{
   display: block;
   font-size: 16px;
   color: #fff;
 }
+.breadcrumb{
+  margin-top: 60px;
+}
 .table.table-bordered th,
 .table.table-bordered td{
   text-align: center;
   vertical-align: middle;
+}
+.charts_left,
+.charts_right{
+  width: 45%;
+  height: 400px;
 }
